# mermaid-rs-renderer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: font_startup.rs  renderer.rs
docs/: benchmarks.md  comparison.html  comparison_manifest.json  error_tracking.md  flowchart-layout-redesign.md  release.md  unwrap_audit.md  visual-benchmark-matrix.md
docs/comparison_sources/: flowchart_back_edges.mmd  flowchart_bt.mmd  flowchart_cross_subgraph_labels.mmd  flowchart_cycle_entry_exit.mmd  flowchart_disconnected.mmd  flowchart_hub_spoke.mmd  flowchart_nested_subgraphs.mmd  flowchart_rl.mmd
scripts/: flowchart_redesign_gate.py  label_bench.py  layout_score.py  priority_bench.py  quality_bench.py  quality_gate.py
src/: cli.rs  config.rs  edge_geometry.rs  error.rs  ir.rs  lib.rs  parser.rs  render.rs  text_metrics.rs  theme.rs  unicode_width.rs  validator.rs
src/layout/: architecture.rs  block.rs  c4.rs  gantt.rs  gitgraph.rs  invariants.rs  journey.rs  label_placement.rs  mindmap.rs  mod.rs  pie.rs  quadrant.rs  ranking.rs  routing.rs  sankey.rs  sequence.rs  subgraphs.rs  text.rs  timeline.rs  treemap.rs  types.rs  xychart.rs
src/layout/flowchart/: edge_pipeline.rs  finalize.rs  manual_layout.rs  mod.rs  objectives.rs  path_cleanup.rs  plan.rs  policy.rs  post_route.rs  roles.rs  route_labels.rs  subgraph_spacing.rs
tests/: cli_suite.rs  invariant_suite.rs  layout_suite.rs  parse_errors.rs  provenance_architecture.rs  provenance_block.rs  provenance_byte_identity.rs  provenance_c4.rs  provenance_class.rs  provenance_er.rs  provenance_flowchart.rs  provenance_gantt.rs  provenance_gitgraph.rs  provenance_journey.rs  provenance_kanban.rs  provenance_mindmap.rs  provenance_packet.rs  provenance_pie.rs  provenance_quadrant.rs  provenance_radar.rs  provenance_requirement.rs  provenance_sankey.rs  provenance_sequence.rs  provenance_state.rs  provenance_timeline.rs  provenance_treemap.rs  provenance_xychart.rs  provenance_zenuml.rs  robustness_suite.rs  visual_issue_suite.rs  warning_mode_test.rs
tests/fixtures/flowchart/: bidirectional_labels.mmd  subgraph_empty.mmd
tests/fixtures/mindmap/: lr_tree.mmd  tidy_tree.mmd
tests/fixtures/sequence/: nested_alt.mmd
tests/fixtures/warning/: malformed-flowchart.mmd  malformed-sequence.mmd  unclosed-subgraph.mmd
